--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 Flask==3.0.0
 Flask-CORS==4.0.0
 requests==2.31.0
-pandas==2.2.2
+pandas>=2.2.0
 python-dateutil==2.8.2
-matplotlib==3.8.4
-seaborn==0.13.2
-numpy==1.26.4
+matplotlib>=3.8.0
+seaborn>=0.13.0
+numpy>=1.26.0
 python-dotenv==1.0.0
-gunicorn==21.2.0
+gunicorn>=21.2.0
