--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-Flask==3.0.0
+Flask==2.3.3
 Flask-CORS==4.0.0
 requests==2.31.0
-pandas>=2.2.0
+pandas==2.0.3
 python-dateutil==2.8.2
-matplotlib>=3.8.0
-seaborn>=0.13.0
-numpy>=1.26.0
+matplotlib==3.7.2
+seaborn==0.12.2
+numpy==1.24.3
 python-dotenv==1.0.0
-gunicorn>=21.2.0
+gunicorn==21.2.0
